@@ -1,3 +1,9 @@
+2009-05-04  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
+
+	PR c++/28152
+	* g++.dg/parse/parser-pr28152.C: New.
+	* g++.dg/parse/parser-pr28152-2.C: New.
+
 2009-05-04  Joseph Myers  <joseph@codesourcery.com>
 
 	* gcc.dg/attr-alias-5.c, gcc.dg/ucnid-7.c: New tests.
